fix: remove line breaks on scrollable table headers

--- a/packages/components/table/src/styles/index.module.scss
+++ b/packages/components/table/src/styles/index.module.scss
@@ -20,6 +20,7 @@
     position: sticky;
     top: 0;
     background-color: get-color(neutral-0);
+    white-space: nowrap;
   }
 
   thead th:first-child {
